<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/pagamento_tv_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/orientacao_pagamento"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_tv_rotulo_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_tv_orientacao" />

    <TextView
        android:id="@+id/pagamento_tv_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamento_tv_rotulo_preco_pacote"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_tv_rotulo_preco_pacote"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamento_et_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:autofillHints="creditCardNumber"
        android:hint="@string/numero_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_tv_preco_pacote"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pagamento_et_mes_cartao"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="2"
        android:hint="@string/mes_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_et_cvc_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_et_numero_cartao"
        tools:ignore="TextContrastCheck"
        android:autofillHints="creditCardExpirationMonth" />

    <EditText
        android:id="@+id/pagamento_et_ano_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="2"
        android:hint="@string/ano_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_et_mes_cartao"
        app:layout_constraintStart_toEndOf="@id/pagamento_et_mes_cartao"
        tools:ignore="TextContrastCheck"
        android:autofillHints="creditCardExpirationYear" />

    <EditText
        android:id="@+id/pagamento_et_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc_cartao"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="@id/pagamento_et_numero_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_et_numero_cartao"
        tools:ignore="TextContrastCheck"
        android:autofillHints="creditCardSecurityCode" />

    <EditText
        android:id="@+id/pagamento_et_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/nome_cartao"
        android:inputType="textPersonName"
        android:maxLength="12"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/pagamento_et_numero_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_et_numero_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_et_cvc_cartao"
        tools:ignore="TextContrastCheck"
        tools:inputType="textPersonName"
        android:autofillHints="personName" />

    <Button
        android:id="@+id/pagamento_btn_finalizar_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/retangulo_arredondado_laranja"
        android:text="@string/finalizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_et_nome_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_et_nome_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_et_nome_cartao" />
</androidx.constraintlayout.widget.ConstraintLayout>