<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/resumo_compra_banner"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/orangeDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resumo_compra_tv_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/parabens"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_banner"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_banner" />

    <TextView
        android:id="@+id/resumo_compra_tv_compra_realizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/compra_realizada"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_tv_parabens"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_tv_parabens"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_tv_parabens" />

    <TextView
        android:id="@+id/resumo_compra_tv_confira_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confira_resumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_banner" />

    <ImageView
        android:id="@+id/resumo_compra_iv_pacote"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagem_do_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_tv_confira_resumo"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_local_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_iv_pacote"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumo_compra_data_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_local_pacote"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_local_pacote"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/resumo_compra_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_data_viagem"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_data_viagem"
        tools:text="R$ 243,99" />
</androidx.constraintlayout.widget.ConstraintLayout>