<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_pacote_iv_pacote"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/imagem_do_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_pacote_tv_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_iv_pacote"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumo_pacote_tv_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_tv_local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_tv_local"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/resumo_pacote_tv_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/resumo_pacote_tv_preco"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_tv_dias"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_tv_dias"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/resumo_pacote_tv_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_pacote_tv_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/resumo_pacote_tv_data"
        tools:text="R$ 2430000,99" />

    <TextView
        android:id="@+id/resumo_pacote_tv_rotulo_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_final"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/resumo_pacote_tv_preco"
        app:layout_constraintEnd_toEndOf="@+id/resumo_pacote_tv_preco" />

    <Button
        android:id="@+id/resumo_pacote_btn_pagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/retangulo_arredondado_laranja"
        android:text="@string/realizar_pagamento"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>